Enhance comments, raw types and other small hints to reduce java warnings